--- a/pages/schedule/schedule.wxml
+++ b/pages/schedule/schedule.wxml
@@ -1,4 +1,5 @@
 <view class="page">
+<view class="page-content">
   <block wx:if="{{schedule.length == 0}}">
     <view class="no-content">尚未查询到任何数据</view>
   </block>
@@ -25,4 +26,5 @@
     <view class="ui-add-btn" bindtap="addOneSchedule">
       <image class="ui-add-icon" src="../../src/icon/add.png"></image>
     </view> 
+    </view>
 </view>
